--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -15,7 +15,7 @@ repository:
   topics: platform, devstudio, node-red, push-notifications
 
   # Either `true` to make the repository private, or `false` to make it public.
-  private: true
+  private: false
 
   # Either `true` to enable issues for this repository, `false` to disable them.
   has_issues: true
